--- a/src/assets/sass/_masthead.scss
+++ b/src/assets/sass/_masthead.scss
@@ -10,14 +10,14 @@
       #{fade-out($black, 0.3)} 75%,
       $black 100%
     ),
-    url('../images/bgwaterdrop.jpg');
+    url('../images/store.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
   h1 {
     font-family: 'Varela Round';
-    font-size: 2.5rem;
+    font-size: 2rem;
     line-height: 2.5rem;
     letter-spacing: 0.8rem;
     background: -webkit-linear-gradient(
